style.css
/* ... */
.footer__title {
  font-family: "FeeeelsFuzzy";
}

/*Schuyler's Stylez*/

@font-face {
  font-family: "Feels Fuzzy";
  src: url("assets/fonts/FeeeelsFuzzyTrialRegular.woff") format("woff");
}

@font-face {
  font-family: "Radley";
  src: url("assets/fonts/Radley-Italic.woff") format("woff"),
       url("assets/fonts/Radley-Regular.woff") format("woff");
}

@font-face {
  font-family: "Halyard";
  src: url("assets/fonts/HalyardDisplayRegular.woff") format("woff"),
}

.container {
  height: 100vh;
  width: 100vw;
  background-color: #c4c4c4;
  display: flex;
}

* {
  box-sizing: border-box;
}

.menu-wrapper .hamburger-list {
  position: fixed;
  right: 0;
  height: 100vh;
  width: calc(50% + 3px);
  z-index: -1;
  flex-direction: column;
  border-left: 3px solid #D2030F;
  /* border-top: 3px solid #D2030F; */
  /* border-bottom: 3px solid #D2030F; */
  /*transition: transform 1s ease-in-out;*/
  overflow-y:scroll;
  visibility: hidden;
  display: flex;
}

.hamburger-article {
  top: 92px !important;
  height: calc(100vh - 92px) !important;
}

.about h4 {
  font-size: 16px;
  margin-bottom: 0px;
}

.hamburger-list {
  position: absolute;
  z-index: -1;
}

.open {
  /*transform: translate(0,-100vh);*/
  visibility: visible !important;
}

.hamburger-list .hamburger-item {
  position: relative;
  min-height: 100px;
  font-weight: 800;
  font-size: 45px;
  border-bottom: 3px solid #D2030F;
  font-family: "HalyardDisplayRegular", bold;
  color: #D2030F;
  background-color: #c4c4c4;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;

  cursor: pointer;
}

.hamburger-list .hamburger-rest {
  flex: 1;
  background-color: #c4c4c4;
}

.list-child {
  font-size: 14px;
  display: none;
  position: relative;
  background-color: #c4c4c4;
  z-index:5;
}

.list-child ul{
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.displayed {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.about {
  width: 90%;
  color: #D2030F;
}

.about ul {
  font-size: 16px;
}

.about i {
  font-size: 30px;
  line-height: 30px;
  font-family: "RadleyItalic";
}

.submit {
  height: 90%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.prev-issues {
  width: 100%;
}

.prev-issues li{
  border-bottom: 3px solid #D2030F;
  height: 75px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #D2030F;
  font-style: italic;
  font-size: 30px;
  padding: 0;
}

.about ul li {
  padding: 0;

}

.bordered {
  border-bottom: 3px solid #D2030F;
}

@media only screen and (max-width: 768px) {
  .menu-wrapper .hamburger-list {
    border-right: 3px solid #D2030F;
    width: 100%;
    height: auto;
  }
  .hamburger-list .hamburger-item {
    font-size: 16px;
    min-height: 50px;
  }
  .about i {
    font-size: 16px;
    line-height: 1.5;
  }
  .issues {
    display: flex;
    flex-wrap: wrap;
  }
  .prev-issues li {
    border: 3px solid #D2030F;
    flex: 1 0 50%;
  }
  .about h2 {
    font-size: 16px;
  }
  .hamburger-list .hamburger-rest {
    display: none;
  }
}

.header {
  height: 92px;
  background: white;
  position: absolute;
  top: 0;
  width: 100%;
  display: flex;
  border-bottom: 3px solid #D2030F;
}

.header div {
  width: 50%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.header div img {
  cursor: pointer;
}

.header .header-left {
  border-right: 3px solid #D2030F;
}

#footer-landing {
  bottom:0;
  width:100%;
  position: absolute;
}

.first { 
  z-index: 3;
}

.title-text-menu{
  color: #D2030F;
  font-family: 'HalyardDisplayRegular';
  font-size: 2.5em;
}

.author-text-menu{
  color: #D2030F;
  font-family: 'HalyardDisplayRegular';
  font-size: 1.3em;
}

